--- a/css/web.css
+++ b/css/web.css
@@ -1,13 +1,21 @@
 body{
     margin: 0;
+    padding: 0;
+    min-width:100vw;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 header{
-    background-color:white;
+    background-color:rgb(255, 225, 0);
+    opacity: 1;
     color:black;
     border: none;
     width:100%;
-    height:5%;
+    height:125px;
     vertical-align: top;
+    position: fixed;
+    
 }
 .head-logo{
     width:34%;
@@ -16,6 +24,7 @@ header{
     margin-top: 5px;
     margin-bottom: 0;
     display: inline-block;
+    
 }
 .logo-picture{
     margin-top: 10px;
@@ -42,6 +51,12 @@ hr{
     padding-left: 15%;
     margin-top: 5px;
 }
+aside{
+    float: left;
+    padding-left: 20px;
+    height:100%;
+    width:150px;
+}
 .menu-ul{
     list-style-type: none;
     width:700px;
@@ -52,8 +67,35 @@ hr{
     margin-right: 20px;
     margin-top: 10px;
     width:150px;
-    font-size: 25px;
-    color:black;
+}
+a{
+    font-size: 22px;
+    font-weight: bold;
+    color: #1a0f07;
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
+.product-pic{
+    width:300px;
+}
+.product-info-grid{
+    padding-top: 125px;
+    padding-left: 170px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 40px;
+    justify-content: end;
+}
+.pic-word{
+    display: inline-block;
+}
+aside{
+    margin-top: 125px;
+    position: fixed;
+
 }
    
 
